# GameComp_Py

./: .gitignore  PROGRESS.md  README.md  REPO_NOTES.md  customer-validation-session.md  lorekeeper_launcher.py  pyproject.toml  research-protocol.md  spec.md  tech-design-session.md  tech-review-notes.md  tech-review-v2-notes.md  test-spec.md
.github/workflows/: build-installers.yml
src/gamecompanion/: __main__.py  auth.py  config.py  db.py  export.py  graph.py  llm.py  main.py  memory.py  rag.py  routes.py
tests/: validate_refactor.py
tests/e2e/: conftest.py  test_m1_first_conversation.py  test_m2_multi_playthrough.py  test_m3_memory_recall.py  test_m4_web_search.py  test_m5_living_memory.py  test_m6_settings_polish.py
tests/e2e_live/: conftest.py  test_copilot_backend.py
tests/integration/: conftest.py  test_api_key.py  test_chat.py  test_graph.py  test_import_export.py  test_rag.py  test_settings.py  test_welcome.py
tests/unit/: test_auth.py  test_config.py  test_db.py  test_export.py  test_graph.py  test_llm.py  test_memory.py  test_rag.py
